<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Signer</string>
  <string name="search_results_title">PGP search results</string>
  <string name="qr_title">QR Code</string>
  <string name="search">Search</string>
  <string name="search_string">Search for a key</string>
  <string name="approve">Approve</string>
  <string name="key_title">Confirm key</string>
  <string name="dashboard_title">Signer</string>
  <string name="scanQR">Scan a key</string>
  <string name="or_find_key">or find key</string>
  <string name="is_this_key_legit">Do you want to sign this key?</string>
  <string name="sign">Yes, sign this key</string>
  <string name="dont_sign">No, don\'t sign this key</string>
  <string name="verification_title">Verification</string>
  <string name="sign_out">Change my key</string>
</resources>
