<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">



  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="Your key is:"
      android:id="@+id/title"/>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/keyid"/>

  <ImageView
      android:id="@+id/qrCode"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="16dp"
      android:ems="10" />

  <Button
      android:id="@+id/scanButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="8dp"
      android:onClick="onScanClicked"
      android:text="@string/scanQR" />

  <EditText
      android:id="@+id/searchString"
      android:hint="@string/search_string"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="16dp"
      android:ems="10" />

  <Button
      android:id="@+id/search_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="8dp"
      android:onClick="onSearchClicked"
      android:text="@string/search" />



  <Button
      android:id="@+id/sign_out_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginTop="8dp"
      android:onClick="onSignOutClicked"
      android:text="@string/sign_out" />

</LinearLayout>